--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -1,4 +1,6 @@
 $Mcyan: hsl(176, 50%, 47%);
 $Dcyan: hsl(176, 72%, 28%);
 $Black: hsl(0, 0%, 0%);
+$Mblack:rgba(0, 0, 0, 0.3);
 $Dgray: hsl(0, 0%, 48%);
+$crack: hsl(0, 0%, 100%);
