--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -12,4 +12,9 @@
   padding: 0;
   box-sizing: border-box;
   list-style-type: none;
+  font-family: 'Commissioner', sans-serif;
+}
+body{
+  background-color: rgb(244, 244, 244);
+  position: relaive;
 }
