--- a/styles/_selection-modal.scss
+++ b/styles/_selection-modal.scss
@@ -2,7 +2,7 @@
 @import 'media-quires';
 
 .selection-modal{
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -65,19 +65,28 @@
       border: 1px solid $Mblack;
       margin-bottom: 20px;
       border-radius: 5px;
-      padding: 20px 10px;
 
       div{
         display: flex;
         gap: 10px;
         align-items: flex-start;
+        width: 95%;
+        padding: 10px 0;
+        margin: 0 auto;
+
         div{
           display: flex;
           flex-direction: column;
+          padding: 0;
+
+          p{
+            margin: 0;
+          }
           div{
             display: flex;
             flex-direction: row;
             width: 100%;
+            padding: 0;
 
             p{
               color: $Black;
@@ -91,6 +100,7 @@
               display: flex;
               flex-direction: row;
               width: 100%;
+              padding: 0;
               
               h2{
                 margin: 0;
@@ -105,11 +115,59 @@
         }
       }
       .pledge{
-        display: none;
+        display: flex;
+        border-top: 1px solid $Dgray;
+        width: 100%;
+        padding: 10px;
+        align-items: center;
+        gap: 0;
         justify-content: space-between;
+        
+        p{
+          margin: 0;
+          width: 100%;
+        }
     
         div{
           display: flex;
+          flex-direction: row;
+          justify-content: flex-end;
+          align-items: center;
+          border: none;
+          border-radius: 30px;
+
+          .input-btn{
+            display: flex;
+            align-items: center;
+            background-color: $crack;
+            border: 1px solid $Dgray;
+            padding: 5px 20px;
+            border-radius: 30px;
+            font-size: 13px;
+            font-weight: 700;
+            color: $Dgray;
+            
+
+            input{
+              width: 30px;
+              height: 30px;
+              border: none;
+              background-color: $crack;
+              outline: none;
+              margin-left: 10px;
+              font-size: 15px;
+              font-weight: 700;
+            }
+          }
+
+          .continue-btn{
+            padding: 14px 25px;
+            background-color: $Mcyan;
+            border-radius: 30px;
+            border: none;
+            font-size: 12px;
+            color: $crack;
+          }
         }
       }
     }
