--- a/styles/styles.css
+++ b/styles/styles.css
@@ -231,7 +231,7 @@
 }
 
 .selection-modal {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -289,21 +289,28 @@
   border: 1px solid rgba(0, 0, 0, 0.3);
   margin-bottom: 20px;
   border-radius: 5px;
-  padding: 20px 10px;
 }
 .selection-modal section .pledge-contain div, .selection-modal section .inactive div {
   display: flex;
   gap: 10px;
   align-items: flex-start;
+  width: 95%;
+  padding: 10px 0;
+  margin: 0 auto;
 }
 .selection-modal section .pledge-contain div div, .selection-modal section .inactive div div {
   display: flex;
   flex-direction: column;
+  padding: 0;
+}
+.selection-modal section .pledge-contain div div p, .selection-modal section .inactive div div p {
+  margin: 0;
 }
 .selection-modal section .pledge-contain div div div, .selection-modal section .inactive div div div {
   display: flex;
   flex-direction: row;
   width: 100%;
+  padding: 0;
 }
 .selection-modal section .pledge-contain div div div p, .selection-modal section .inactive div div div p {
   color: hsl(0, 0%, 0%);
@@ -317,6 +324,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+  padding: 0;
 }
 .selection-modal section .pledge-contain div div div div h2, .selection-modal section .inactive div div div div h2 {
   margin: 0;
@@ -326,11 +334,54 @@
   font-size: 13px;
 }
 .selection-modal section .pledge-contain .pledge, .selection-modal section .inactive .pledge {
-  display: none;
+  display: flex;
+  border-top: 1px solid hsl(0, 0%, 48%);
+  width: 100%;
+  padding: 10px;
+  align-items: center;
+  gap: 0;
   justify-content: space-between;
+}
+.selection-modal section .pledge-contain .pledge p, .selection-modal section .inactive .pledge p {
+  margin: 0;
+  width: 100%;
 }
 .selection-modal section .pledge-contain .pledge div, .selection-modal section .inactive .pledge div {
   display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  border: none;
+  border-radius: 30px;
+}
+.selection-modal section .pledge-contain .pledge div .input-btn, .selection-modal section .inactive .pledge div .input-btn {
+  display: flex;
+  align-items: center;
+  background-color: hsl(0, 0%, 100%);
+  border: 1px solid hsl(0, 0%, 48%);
+  padding: 5px 20px;
+  border-radius: 30px;
+  font-size: 13px;
+  font-weight: 700;
+  color: hsl(0, 0%, 48%);
+}
+.selection-modal section .pledge-contain .pledge div .input-btn input, .selection-modal section .inactive .pledge div .input-btn input {
+  width: 30px;
+  height: 30px;
+  border: none;
+  background-color: hsl(0, 0%, 100%);
+  outline: none;
+  margin-left: 10px;
+  font-size: 15px;
+  font-weight: 700;
+}
+.selection-modal section .pledge-contain .pledge div .continue-btn, .selection-modal section .inactive .pledge div .continue-btn {
+  padding: 14px 25px;
+  background-color: hsl(176, 50%, 47%);
+  border-radius: 30px;
+  border: none;
+  font-size: 12px;
+  color: hsl(0, 0%, 100%);
 }
 .selection-modal section .inactive {
   opacity: 0.4;
