--- a/styles/_first-section.scss
+++ b/styles/_first-section.scss
@@ -7,19 +7,94 @@
   height: 50vh;
   width: 100%;
 
+  @include mobile{
+    
+  }
+
   nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 30px 150px;
+    position: relative;
 
-    ul{
-      display: flex;
-      gap: 30px;
+    @include mobile{
+      padding: 20px;
+    }
 
-      li{
-        color: $crack;
+    .hamburger{
+      display: none;
+
+      @include mobile{
+        display: inline-block;
       }
     }
+
+    div{
+
+      img{
+        height: 20px;
+        display: none;
+
+        @include mobile{
+          display: inline-block;
+          position: absolute;
+          right: 20px;
+          top: 20px;
+        }
+      }
+      
+      @include mobile{
+        width: 100vw;
+        height: 100vh;
+        background-color: $Mblack;
+        z-index: 10;
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: none;
+        justify-content: center;
+      }
+
+      ul{
+        display: flex;
+        gap: 30px;
+        z-index: 10;
+  
+        @include mobile{
+          position: absolute;
+          width: 90%;
+          margin: 0;
+          flex-direction: column;
+          justify-content: center;
+          background-color: $crack;
+          gap: 0;
+          border-radius: 7px;
+          margin-top: 70px;
+        }
+  
+        :nth-child(3){
+  
+          @include mobile{
+            border-bottom: none;
+          }
+          
+        }
+  
+        li{
+          color: $crack;
+  
+          @include mobile{
+            color: $Black;
+            padding: 20px;
+            border-bottom: 1px solid $Dgray;
+            font-weight: 700;
+            font-size: 15px;
+          }
+        }
+      }
+    }
+
+   
   }
 }
