--- a/styles/_fourth-section.scss
+++ b/styles/_fourth-section.scss
@@ -9,6 +9,11 @@
   margin: 0 auto;
   padding: 30px;
   border-radius: 7px;
+  margin-bottom: 30px;
+
+  @include mobile{
+    width: 90%;
+  }
 
   .inactive{
     opacity: 0.4;
@@ -23,6 +28,10 @@
     font-size: 14px;
     color: $Dgray;
     font-weight: 500;
+
+    @include mobile{
+      font-size: 13px;
+    }
   }
   :nth-child(3){
     margin-bottom: 30px;
@@ -38,8 +47,15 @@
       align-items: flex-start;
       justify-content: space-between;
 
+      @include mobile{
+        flex-direction: column;
+      }
+
       h3{
         font-size: 15px;
+        @include mobile{
+          margin-bottom: 5px;
+        }
       }
 
       p{
@@ -54,12 +70,21 @@
       align-items: center;
       margin-bottom: 0;
 
+      @include mobile{
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
       p{
         font-size: 23px;
         font-weight: 700;
         color: $Black;
         line-height: normal;
         margin-bottom: 0;
+
+        @include mobile{
+          margin-bottom: 10px;
+        }
         
         span{
           font-size: 15px;
