--- a/styles/_second-section.scss
+++ b/styles/_second-section.scss
@@ -14,6 +14,10 @@
   border-radius: 7px;
   position: relative; 
 
+  @include mobile{
+    width: 90%;
+  }
+
   .logo{
     margin: -30px 0 25px 0;
   }
@@ -22,9 +26,20 @@
     font-size: 25px;
     font-weight: 700;
     margin-bottom: 10px;
+
+    @include mobile{
+      text-align: center;
+    }
   }
   p{
     margin-bottom: 40px;
+    color: $Dgray;
+
+    @include mobile{
+     text-align: center;
+     width: 90%;
+     margin-bottom: 20px;
+    }
   }
   .button-container1{
     display: flex;
@@ -36,12 +51,15 @@
     margin-bottom: 30px;
 
     button{
-      padding: 14px 25px;
+      padding: 15px 25px;
       background-color: $Mcyan;
       border-radius: 30px;
       border: none;
       font-size: 12px;
       color: $crack; 
+      @include mobile{
+        width: 80%;
+      }
     }
 
     div{
@@ -55,6 +73,11 @@
         width: 45px;
         position: absolute;
         left: -40px;
+
+        @include mobile{
+          right: 0;
+          margin-left: 0;
+        }
       }
 
       button{
@@ -64,9 +87,12 @@
         border-bottom-left-radius: 0px;
         border-top-left-radius: 0px;
         font-weight: 700;
-
         color: $Dgray;
         background-color: rgb(214, 214, 214);
+        
+        @include mobile{
+          display: none;
+        }
       }
     }
   }
