--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,13 +9,80 @@
   justify-content: space-between;
   align-items: center;
   padding: 30px 150px;
+  position: relative;
 }
-.first nav ul {
+@media screen and (max-width: 375px) {
+  .first nav {
+    padding: 20px;
+  }
+}
+.first nav .hamburger {
+  display: none;
+}
+@media screen and (max-width: 375px) {
+  .first nav .hamburger {
+    display: inline-block;
+  }
+}
+.first nav div img {
+  height: 20px;
+  display: none;
+}
+@media screen and (max-width: 375px) {
+  .first nav div img {
+    display: inline-block;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+  }
+}
+@media screen and (max-width: 375px) {
+  .first nav div {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 10;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    justify-content: center;
+  }
+}
+.first nav div ul {
   display: flex;
   gap: 30px;
+  z-index: 10;
 }
-.first nav ul li {
+@media screen and (max-width: 375px) {
+  .first nav div ul {
+    position: absolute;
+    width: 90%;
+    margin: 0;
+    flex-direction: column;
+    justify-content: center;
+    background-color: hsl(0, 0%, 100%);
+    gap: 0;
+    border-radius: 7px;
+    margin-top: 70px;
+  }
+}
+@media screen and (max-width: 375px) {
+  .first nav div ul :nth-child(3) {
+    border-bottom: none;
+  }
+}
+.first nav div ul li {
   color: hsl(0, 0%, 100%);
+}
+@media screen and (max-width: 375px) {
+  .first nav div ul li {
+    color: hsl(0, 0%, 0%);
+    padding: 20px;
+    border-bottom: 1px solid hsl(0, 0%, 48%);
+    font-weight: 700;
+    font-size: 15px;
+  }
 }
 
 .second {
@@ -31,6 +98,11 @@
   border-radius: 7px;
   position: relative;
 }
+@media screen and (max-width: 375px) {
+  .second {
+    width: 90%;
+  }
+}
 .second .logo {
   margin: -30px 0 25px 0;
 }
@@ -39,8 +111,21 @@
   font-weight: 700;
   margin-bottom: 10px;
 }
+@media screen and (max-width: 375px) {
+  .second h1 {
+    text-align: center;
+  }
+}
 .second p {
   margin-bottom: 40px;
+  color: hsl(0, 0%, 48%);
+}
+@media screen and (max-width: 375px) {
+  .second p {
+    text-align: center;
+    width: 90%;
+    margin-bottom: 20px;
+  }
 }
 .second .button-container1 {
   display: flex;
@@ -52,12 +137,17 @@
   margin-bottom: 30px;
 }
 .second .button-container1 button {
-  padding: 14px 25px;
+  padding: 15px 25px;
   background-color: hsl(176, 50%, 47%);
   border-radius: 30px;
   border: none;
   font-size: 12px;
   color: hsl(0, 0%, 100%);
+}
+@media screen and (max-width: 375px) {
+  .second .button-container1 button {
+    width: 80%;
+  }
 }
 .second .button-container1 div {
   display: flex;
@@ -70,6 +160,12 @@
   position: absolute;
   left: -40px;
 }
+@media screen and (max-width: 375px) {
+  .second .button-container1 div img {
+    right: 0;
+    margin-left: 0;
+  }
+}
 .second .button-container1 div button {
   padding: 14px 23px;
   border-top-right-radius: 30px;
@@ -79,6 +175,11 @@
   font-weight: 700;
   color: hsl(0, 0%, 48%);
   background-color: rgb(214, 214, 214);
+}
+@media screen and (max-width: 375px) {
+  .second .button-container1 div button {
+    display: none;
+  }
 }
 
 .third {
@@ -91,27 +192,60 @@
   border-radius: 7px;
   margin-bottom: 20px;
 }
+@media screen and (max-width: 375px) {
+  .third {
+    width: 90%;
+  }
+}
 .third div {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
 }
+@media screen and (max-width: 375px) {
+  .third div {
+    grid-template-columns: 1fr;
+  }
+}
 .third div .two {
   border-right: 1px solid hsl(0, 0%, 48%);
   border-left: 1px solid hsl(0, 0%, 48%);
+}
+@media screen and (max-width: 375px) {
+  .third div .two {
+    border: none;
+    justify-content: center;
+    align-items: center;
+  }
 }
 .third div div {
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
 }
+@media screen and (max-width: 375px) {
+  .third div div {
+    justify-content: center;
+    align-items: center;
+  }
+}
 .third div div p {
   margin-left: 50px;
+}
+@media screen and (max-width: 375px) {
+  .third div div p {
+    margin: 0;
+  }
 }
 .third div div :nth-child(1) {
   color: black;
   font-size: 20px;
   margin-bottom: 5px;
   font-weight: 700;
+}
+@media screen and (max-width: 375px) {
+  .third div div :nth-child(1) {
+    font-size: 25px;
+  }
 }
 
 .fourth {
@@ -122,6 +256,12 @@
   margin: 0 auto;
   padding: 30px;
   border-radius: 7px;
+  margin-bottom: 30px;
+}
+@media screen and (max-width: 375px) {
+  .fourth {
+    width: 90%;
+  }
 }
 .fourth .inactive {
   opacity: 0.4;
@@ -137,6 +277,11 @@
   color: hsl(0, 0%, 48%);
   font-weight: 500;
 }
+@media screen and (max-width: 375px) {
+  .fourth p {
+    font-size: 13px;
+  }
+}
 .fourth :nth-child(3) {
   margin-bottom: 30px;
 }
@@ -151,8 +296,18 @@
   align-items: flex-start;
   justify-content: space-between;
 }
+@media screen and (max-width: 375px) {
+  .fourth .body .head {
+    flex-direction: column;
+  }
+}
 .fourth .body .head h3 {
   font-size: 15px;
+}
+@media screen and (max-width: 375px) {
+  .fourth .body .head h3 {
+    margin-bottom: 5px;
+  }
 }
 .fourth .body .head p {
   line-height: normal;
@@ -165,12 +320,23 @@
   align-items: center;
   margin-bottom: 0;
 }
+@media screen and (max-width: 375px) {
+  .fourth .body .amount {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
 .fourth .body .amount p {
   font-size: 23px;
   font-weight: 700;
   color: hsl(0, 0%, 0%);
   line-height: normal;
   margin-bottom: 0;
+}
+@media screen and (max-width: 375px) {
+  .fourth .body .amount p {
+    margin-bottom: 10px;
+  }
 }
 .fourth .body .amount p span {
   font-size: 15px;
@@ -231,7 +397,7 @@
 }
 
 .selection-modal {
-  display: none;
+  display: noe;
   flex-direction: column;
   justify-content: center;
   align-items: center;
