--- a/styles/_fourth-section.scss
+++ b/styles/_fourth-section.scss
@@ -98,7 +98,11 @@
         border-radius: 30px;
         border: none;
         font-size: 12px;
-        color: $crack; 
+        color: $crack;
+        cursor: pointer; 
+      }
+      button:hover{
+        background-color: $Dcyan;
       }
     }
   }
