--- a/styles/_second-section.scss
+++ b/styles/_second-section.scss
@@ -12,7 +12,8 @@
   margin-top: -70px;
   margin-bottom: 20px;
   border-radius: 7px;
-  position: relative; 
+  position: relative;
+  
 
   @include mobile{
     width: 90%;
@@ -57,9 +58,13 @@
       border: none;
       font-size: 12px;
       color: $crack; 
+      cursor: pointer;
       @include mobile{
         width: 80%;
       }
+    }
+    button:hover{
+      background-color: $Dcyan;
     }
 
     div{
@@ -73,6 +78,7 @@
         width: 45px;
         position: absolute;
         left: -40px;
+        cursor: pointer;
 
         @include mobile{
           right: 0;
