--- a/styles/_success-modal.scss
+++ b/styles/_success-modal.scss
@@ -9,13 +9,15 @@
 }
 
 .success-modal{
- @extend %flex1;
- display: none;
+  @extend %flex1;
+  display: none;
   position: fixed;
   height: 100vh;
   width: 100vw;
   background-color: $Mblack;
   top: 0;
+
+  
 
   section{
     @extend %flex1;
@@ -23,6 +25,10 @@
     width: 30%;
     padding: 30px;
     border-radius: 7px;
+
+    @include mobile{
+      width: 90%;
+    }
 
     img{
       margin-bottom: 20px;
@@ -45,6 +51,9 @@
       border: none;
       font-size: 12px;
       color: $crack; 
+    }
+    button:hover{
+      background-color: $Dcyan;
     }
   }
 }
