--- a/styles/_third-section.scss
+++ b/styles/_third-section.scss
@@ -63,4 +63,20 @@
       }
     }
   }
+  .progress {
+    width: 100%;
+    height: 30px;
+    border: 1px solid #ccc;
+    position: relative;
+    margin-bottom: 20px;
+
+    .progress-bar {
+      width: 0;
+      height: 100%;
+      background-color: #3498db;
+      position: absolute;
+    }
+  }
+
+  
 }
